[package]
name = "cmdmat"
version = "0.1.1"
authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"
description = "Command matcher for matching lists of strings against handlers"
license = "LGPL-3.0-or-later"
keywords = ["command", "match", "interpreter"]
homepage = "https://docs.rs/cmdmat"
repository = "https://github.com/Omen-of-Aecio/cmdmat"

[lib]
name = "cmdmat"
path = "lib.rs"

[dependencies]
smallvec = "0.6.10"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
